--- a/learn/bootstrap/其他类.html
+++ b/learn/bootstrap/其他类.html
@@ -27,5 +27,11 @@
         <p>c</p>
     </div>
     <p class="blockquote-footer">123</p>
+    <abbr title="提示">缩略语</abbr>
+    <address>地址</address>
+    <p class="placeholder">123</p>
+    <p class="placeholder placeholder-xs">123</p>
+    <p class="placeholder placeholder-sm">123</p>
+    <p class="placeholder placeholder-lg">123</p>
 </body>
 </html>
