--- a/learn/bootstrap/按钮.html
+++ b/learn/bootstrap/按钮.html
@@ -51,5 +51,7 @@
         <button type="button" class="btn btn-primary">索尼</button>
         <button type="button" class="btn btn-primary">索尼</button>
     </div>
+    <button class="btn-close"></button>
+    <button class="btn-close btn-close-white"></button>
 </body>
 </html>
