--- a/learn/bootstrap/模态框.html
+++ b/learn/bootstrap/模态框.html
@@ -9,65 +9,109 @@
 </head>
 <body class="container mt-5">
 
-<!-- 打开模态框的按钮 -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
-  打开模态框
-</button>
 
-<!-- 模态框 -->
-<div class="modal fade" id="myModal">
-  <div class="modal-dialog modal-sm modal-dialog-scrollable">
-    <div class="modal-content">
-
-      <!-- 模态框头部 -->
-      <div class="modal-header">
-        <h4 class="modal-title">模态框标题</h4>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
+    打开模态框
+  </button>
+  <div class="modal fade" id="myModal">
+    <div class="modal-dialog modal-sm modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">模态框标题</h4>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+          模态框内容...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">关闭</button>
+        </div>
       </div>
-
-      <!-- 模态框内容 -->
-      <div class="modal-body">
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-        模态框内容...
-      </div>
-
-      <!-- 模态框底部 -->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">关闭</button>
-      </div>
-
     </div>
   </div>
-</div>
+
+
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal1">modal1</button>
+    <div class="modal modal-static fade " id="modal1">
+      <div class="modal-dialog modal-sm modal-dialog-scrollable modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <div class="modal-title">123</div>
+            <button type="button" class="btn btn-close" data-bs-dismiss="modal"></button>
+          </div>
+          <div class="modal-body">
+            <p>内容</p>
+            <p>内容</p>
+            <p>内容</p>
+            <p>内容</p>
+            <p>内容</p>
+            <p>内容</p>
+            <p>内容</p>
+          </div>
+          <div class="modal-footer">
+            <p>脚部</p>
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">关闭</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal2">modal2</button>
+    <div class="modal modal-static fade" id="modal2">
+      <div class="modal-dialog modal-dialog-scrollable modal-fullscreen">
+        <div class="modal-content">
+          <div class="modal-header">
+            <div class="modal-title">123</div>
+            <button type="button" class="btn btn-close" data-bs-dismiss="modal"></button>
+          </div>
+          <div class="modal-body">
+            <p>内容</p>
+            <p>内容</p>
+            <p>内容</p>
+            <p>内容</p>
+            <p>内容</p>
+            <p>内容</p>
+            <p>内容</p>
+          </div>
+          <div class="modal-footer">
+            <p>脚部</p>
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">关闭</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
 
 </body>
 </html>
