--- a/learn/bootstrap/表单.html
+++ b/learn/bootstrap/表单.html
@@ -9,22 +9,163 @@
 </head>
 <body>
 
-  <form action="/action_page.php">
-    <div class="mb-3 mt-3">
-      <label for="email" class="form-label">电子邮件:</label>
-      <input type="email" class="form-control" id="email" placeholder="输入电子邮件" name="email">
-    </div>
-    <div class="mb-3">
-      <label for="pwd" class="form-label">密码:</label>
-      <input type="password" class="form-control" id="pwd" placeholder="输入密码" name="pswd">
-    </div>
-    <div class="form-check mb-3">
-      <label class="form-check-label">
-        <input class="form-check-input" type="checkbox" name="remember"> 记住我
-      </label>
-    </div>
-    <button type="submit" class="btn btn-primary">提交</button>
-  </form>
-  
+    <form action="#">
+      <label for="l1" class="form-label">标签</label>
+      <input type="text" name="" id="" class="form-control">
+      <label for="l1" class="form-label col-form-label">标签1</label>
+      <input type="text" name="" id="" class="form-control">
+      <p class="form-text">文本</p>
+      <input type="text" name="" id="inp1" class="form-control" placeholder="请输入内容">
+      <input type="number" name="" id="inp2" class="form-control" disabled>
+      <input type="button" name="" id="inp2" class="form-control">
+      <input type="file" name="" id="inp2" class="form-control">
+      <input type="text" name="" id="inp1" class="form-control form-control-sm" placeholder="请输入内容">
+      <input type="text" name="" id="inp1" class="form-control form-control-lg" placeholder="请输入内容">
+      <input type="text" name="" id="inp1" class="form-control-plaintext" placeholder="请输入内容">
+      <input type="number" name="" id="inp2" class="form-control-plaintext">
+      <textarea name="" id="" class="form-control"></textarea>
+      <input type="color" name="" id="" class="form-control-lg form-control-color">
+      <select name="" id="" class="form-select  form-select-lg">
+        <option value="1">123</option>
+        <option value="4">456</option>
+        <option value="7">789</option>
+      </select>
+      <select name="" id="" class="form-select" multiple>
+        <option value="1">123</option>
+        <option value="4">456</option>
+        <option value="7">789</option>
+      </select>
+      <select name="" id="" class="form-select-sm" disabled>
+        <option value="1">123</option>
+        <option value="4">456</option>
+        <option value="7">789</option>
+      </select>
+      <div class="row">
+        <div class="col">
+          <input type="text" name="" id="" class="form-control">
+        </div>
+        <div class="col">
+          <input type="text" name="" id="" class="form-control">
+        </div>
+      </div>
+      <div class="form-check">
+        <label for="check1">option1</label>
+        <input type="checkbox" name="" id="check1" class="form-check-input">
+      </div>
+      <div class="form-check-reverse">
+        <input type="checkbox" name="" id="check2" class="form-check-input">
+        <label for="check2">option2</label>
+      </div>
+      <div class="form-check">
+        <label for="check3">option1</label>
+        <input type="radio" name="n1" id="check3" class="form-check-input">
+      </div>
+      <div class="form-check-reverse">
+        <input type="radio" name="n1" id="check4" class="form-check-input">
+        <label for="check4">option4</label>
+      </div>
+      <div class="form-check form-switch">
+        <label for="check3">option1</label>
+        <input type="checkbox" name="n1" id="check3" class="form-check-input">
+      </div>
+      <div class="form-check form-check-inline">
+        <label for="check1">option1</label>
+        <input type="checkbox" name="" id="check1" class="form-check-input">
+      </div>
+      <div class="form-check-reverse form-check-inline">
+        <label for="check1">option1</label>
+        <input type="checkbox" name="" id="check1" class="form-check-input">
+      </div>
+      <input type="range" name="" id="" class="form-range">
+      <div class="form-floating">
+        <input type="search" name="" id="a" class="form-control" placeholder="请输入">
+        <label for="a">浮动标签</label>
+      </div>
+      <div class="form-floating">
+        <select name="" id="b" class="form-select">
+          <option value="">1</option>
+          <option value="">2</option>
+          <option value="">3</option>
+        </select>
+        <label for="b">浮动标签</label>
+      </div>
+      <div class="input-group">
+        <input type="search" name="" id="a" class="form-control" placeholder="请输入">
+        <span class="input-group-text">tishi</span>
+        <button type="reset" class="btn">按钮</button>
+      </div>
+      <div class="input-group input-group-lg">
+        <div class="input-group-text">tishi</div>
+        <input type="search" name="" id="a" class="form-control" placeholder="请输入">
+        <div class="input-group-text">tishi</div>
+        <input type="search" name="" id="a" class="form-control" placeholder="请输入">
+      </div>
+      <div class="input-group input-group-sm">
+        <div class="input-group-text">tishi</div>
+        <select name="" id="b" class="form-select">
+          <option value="">1</option>
+          <option value="">2</option>
+          <option value="">3</option>
+        </select>
+      </div>
+      <div class="input-group">
+        <div class="input-group-text">tishi</div>
+        <div class="form-floating">
+          <input type="search" name="" id="a" class="form-control" placeholder="请输入">
+          <label for="a">浮动标签</label>
+        </div>
+        <div class="form-floating">
+          <input type="search" name="" id="a" class="form-control" placeholder="请输入">
+          <label for="a">浮动标签</label>
+        </div>
+      </div>
+      <div class="input-group">
+        <div class="input-group-text">
+          <input type="checkbox">
+        </div>
+        <input type="text" name="" id="" class="form-control">
+      </div>
+      
+
+    </form>
+
+    <form action="/action_page.php" class="was-validated">
+      <div class="mb-3 mt-3">
+        <label for="uname" class="form-label">用户名:</label>
+        <input type="text" class="form-control" id="uname" placeholder="输入用户名" name="uname" required>
+        <div class="valid-feedback">有效.</div>
+        <div class="invalid-feedback">请填写此字段.</div>
+      </div>
+      <div class="mb-3">
+        <label for="pwd" class="form-label">密码:</label>
+        <input type="password" class="form-control" id="pwd" placeholder="输入密码" name="pswd" required>
+        <div class="valid-feedback">有效.</div>
+        <div class="invalid-feedback">请填写此字段.</div>
+      </div>
+      <div class="form-check mb-3">
+        <input class="form-check-input" type="checkbox" id="myCheck" name="remember" required>
+        <label class="form-check-label" for="myCheck">我同意 blabla.</label>
+        <div class="valid-feedback">有效.</div>
+        <div class="invalid-feedback">请勾选此复选框以继续.</div>
+      </div>
+      <button type="submit" class="btn btn-primary">提交</button>
+    </form>
+    <form action="">
+      <div class="form-check">
+        <input type="checkbox" class="btn-check" id="customCheckbox" autocomplete="off">
+        <label class="btn btn-outline-primary" for="customCheckbox">选择我</label>
+      </div>
+      <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+        <label class="btn btn-outline-primary" for="btnradio1">选项 1</label>
+
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+        <label class="btn btn-outline-secondary" for="btnradio2">选项 2</label>
+
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+        <label class="btn btn-outline-success" for="btnradio3">选项 3</label>
+      </div>
+    </form>
+
 </body>
 </html>
