--- a/learn/bootstrap/侧边框.html
+++ b/learn/bootstrap/侧边框.html
@@ -8,8 +8,7 @@
     <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-  <!-- 侧边抽屉 -->
-  <div class="offcanvas offcanvas-start text-bg-dark" id="demo">
+  <div class="offcanvas offcanvas-start text-bg-dark show" id="demo">
     <div class="offcanvas-header">
       <h1 class="offcanvas-title">标题</h1>
       <button type="button" class="btn-close text-reset btn-close-white" data-bs-dismiss="offcanvas"></button>
@@ -20,9 +19,21 @@
       <button class="btn btn-secondary" type="button">一个按钮</button>
     </div>
   </div>
-
-  <!-- 打开侧边抽屉的按钮 -->
   <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
+    打开侧边抽屉
+  </button>
+  <div class="offcanvas offcanvas-sm offcanvas-end text-bg-dark" id="demo1">
+    <div class="offcanvas-header">
+      <h1 class="offcanvas-title">标题</h1>
+      <button type="button" class="btn-close text-reset btn-close-white" data-bs-dismiss="offcanvas"></button>
+    </div>
+    <div class="offcanvas-body">
+      <p>一些 Lorem Ipsum 文本。</p>
+      <p>一些 Lorem Ipsum 文本。</p>
+      <button class="btn btn-secondary" type="button">一个按钮</button>
+    </div>
+  </div>
+  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo1">
     打开侧边抽屉
   </button>
 </body>
