--- a/learn/bootstrap/幻灯片.html
+++ b/learn/bootstrap/幻灯片.html
@@ -9,20 +9,10 @@
 </head>
 <body class="container mt-5">
 
-<!-- 轮播 -->
 <div id="demo" class="carousel carousel-dark slide" data-bs-ride="carousel">
-
-  <!-- 指示器/点 -->
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-  </div>
-
-  <!-- 幻灯片/轮播 -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/locallibrary/catalog/static/images/hatsune_miku.png" alt="洛杉矶" class="d-block w-100">
+      <img src="/locallibrary/catalog/static/images/hatsune_miku.png" alt="洛杉矶" class="w-100">
     </div>
     <div class="carousel-item">
       <img src="/locallibrary/catalog/static/images/hatsune_miku.png" alt="芝加哥" class="d-block w-100">
@@ -36,13 +26,17 @@
     </div>
   </div>
 
-  <!-- 左右控制/图标 -->
   <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </button>
   <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
     <span class="carousel-control-next-icon"></span>
   </button>
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+  </div>
 </div>
 
 </body>
