--- a/learn/bootstrap/下拉列表.html
+++ b/learn/bootstrap/下拉列表.html
@@ -9,20 +9,22 @@
 </head>
 <body class="container mt-5">
     <div class="dropdown dropend">
-        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">下拉菜单</button>
-        <div class="dropdown-menu">
-          <li><h5 class="dropdown-header">下拉标题 1</h5></li>
-          <li><a class="dropdown-item active" href="#">链接 1</a></li>
-          <li><a class="dropdown-item" href="#">链接 2</a></li>
-          <li><a class="dropdown-item" href="#">链接 3</a></li>
-          <li><hr class="dropdown-divider"></hr></li>
-          <li><h5 class="dropdown-header">下拉标题 1</h5></li>
-          <li><a class="dropdown-item disabled" href="#">链接 1</a></li>
-          <li><a class="dropdown-item" href="#">链接 2</a></li>
-          <li><a class="dropdown-item-text" href="#">链接 3</a></li>
-          <li><span class="dropdown-item-text">文本</span></li>
-        </div>
+        <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown">按钮</button>
+        <ul class="dropdown-menu dropdown-menu-dark">
+            <li class="dropdown-header">分组1</li>
+            <li class="dropdown-item">项目1</li>
+            <li class="dropdown-item active">项目2</li>
+            <li class="dropdown-divider"></li>
+            <li class="dropdown-header">分组2</li>
+            <li><a href="#" class="dropdown-item">链接1</a></li>
+            <li><a href="#" class="dropdown-item">链接2</a></li>
+            <li class="dropdown-divider"></li>
+            <li class="dropdown-header">分组3</li>
+            <li class="dropdown-item-text">文本1</li>
+            <li class="dropdown-item-text">文本2</li>
+        </ul>
     </div>
+
     <div class="btn-group">
       <button type="button" class="btn btn-primary">苹果</button>
       <button type="button" class="btn btn-primary">三星</button>
