--- a/learn/bootstrap/导航.html
+++ b/learn/bootstrap/导航.html
@@ -8,38 +8,8 @@
     <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="container mt-5">
-  <ul class="nav">
-    <li class="nav-item">
-      <a class="nav-link" href="#">链接</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">链接</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">链接</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#">禁用</a>
-    </li>
-  </ul>
-  <ul class="nav nav-tabs">
-    <li class="nav-item">
-      <a class="nav-link" href="#">链接</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">链接</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">链接</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#">禁用</a>
-    </li>
-  </ul>
-  <ul class="nav nav-pills nav-justified">
-    <li class="nav-item">
-      <a class="nav-link active" href="#">链接</a>
-    </li>
+  <ul class="nav nav-underline nav-justified my-3">
+    <a class="nav-link active">链接122</a>
     <li class="nav-item show">
       <a class="nav-link" href="#">链接</a>
     </li>
@@ -47,29 +17,14 @@
       <a class="nav-link" href="#">链接</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link disabled" href="#">禁用</a>
-    </li>
-  </ul>
-  <ul class="nav nav-tabs">
-    <li class="nav-item">
-      <a class="nav-link active" href="#">活动</a>
-    </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">下拉菜单</a>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">链接 1</a></li>
-        <li><a class="dropdown-item" href="#">链接 2</a></li>
-        <li><a class="dropdown-item" href="#">链接 3</a></li>
-      </ul>
-    </li>
-    <li class="nav-item">
       <a class="nav-link" href="#">链接</a>
     </li>
     <li class="nav-item">
       <a class="nav-link disabled" href="#">禁用</a>
     </li>
   </ul>
-  <ul class="nav nav-tabs">
+
+  <ul class="nav nav-tabs nav-fill">
     <li class="nav-item">
       <a class="nav-link active" data-bs-toggle="tab" href="#home">主页</a>
     </li>
@@ -79,13 +34,13 @@
     <li class="nav-item">
       <a class="nav-link" data-bs-toggle="tab" href="#menu2">菜单 2</a>
     </li>
+    <a class="nav-link" data-bs-toggle="tab" href="#menu3">菜单 3</a>
   </ul>
-  
-  <!-- 标签窗格 -->
   <div class="tab-content">
-    <div class="tab-pane container fade active" id="home">123</div>
+    <div class="tab-pane fade active" id="home">123</div>
     <div class="tab-pane container fade" id="menu1">456</div>
     <div class="tab-pane container fade" id="menu2">789</div>
+    <div class="tab-pane container fade" id="menu3">zhuijia</div>
   </div>
 </body>
 </html>
