--- a/learn/bootstrap/导航栏.html
+++ b/learn/bootstrap/导航栏.html
@@ -7,9 +7,9 @@
     <link href="bootstrap-5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
 </head>
-<body class="container mt-5">
+<body class="container-fluid mt-5">
 
-<nav class="navbar navbar-expand-sm bg-light">
+<nav class="navbar navbar-expand bg-dark navbar-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">徽标</a>
     <ul class="navbar-nav">
@@ -23,17 +23,18 @@
         <a class="nav-link" href="#">链接 3</a>
       </li>
     </ul>
+    <div class="navbar-text">文本</div>
   </div>
 </nav>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-expand-sm">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">徽标</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
+    <a class="navbar-brand" href="#">徽标</a>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav navbar-nav-scroll">
         <li class="nav-item">
           <a class="nav-link" href="#">链接</a>
         </li>
@@ -43,6 +44,16 @@
         <li class="nav-item">
           <a class="nav-link" href="#">链接</a>
         </li>
+        <a class="nav-link" href="#">链接</a>
+        <a class="nav-link" href="#">链接</a>
+        <a class="nav-link" href="#">链接</a>
+        <a class="nav-link" href="#">链接</a>
+        <a class="nav-link" href="#">链接</a>
+        <a class="nav-link" href="#">链接</a>
+        <a class="nav-link" href="#">链接</a>
+        <a class="nav-link" href="#">链接</a>
+        <a class="nav-link" href="#">链接</a>
+        <a class="nav-link" href="#">链接</a>
       </ul>
     </div>
   </div>
