--- a/learn/bootstrap/滚动监测.html
+++ b/learn/bootstrap/滚动监测.html
@@ -7,9 +7,8 @@
     <link href="bootstrap-5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
 </head>
-<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
-
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+<body data-bs-spy="scroll" data-bs-target="navbar" data-bs-offset="0">
+  <nav class="navbar navbar-expand bg-dark navbar-dark fixed-top">
     <div class="container-fluid">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -25,7 +24,7 @@
     </div>
   </nav>
   
-  <div id="section1" class="container-fluid bg-success text-white" style="padding:100px 20px;">
+  <div id="section1" class="container-fluid bg-success text-bg-success" style="padding:100px 20px;">
     <h1>Section 1</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
