--- a/learn/bootstrap/下拉列表.html
+++ b/learn/bootstrap/下拉列表.html
@@ -37,5 +37,12 @@
       </div>
     </div>
   </div>
+  <div class="dropdown">
+    <!-- <a href="#" class="dropdown-toggle" role="button" data-bs-toggle="dropdown">按钮</a> -->
+    <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown">按钮</a>
+    <ul class="dropdown-menu">
+        <li class="dropdown-item">12</li>
+    </ul>
+</div>
 </body>
 </html>
