--- a/learn/bootstrap/其他类.html
+++ b/learn/bootstrap/其他类.html
@@ -32,6 +32,51 @@
     <p class="placeholder">123</p>
     <p class="placeholder placeholder-xs">123</p>
     <p class="placeholder placeholder-sm">123</p>
-    <p class="placeholder placeholder-lg">123</p>
+    <p role="button">123</p>
+    <p>123</p>
+    <p class="h1">这是文本</p>
+    <hr>
+    <abbr title="这是文本">这是abbr</abbr>
+    <address>地址</address>
+    <blockquote>这是blockquote</blockquote>
+    <sub>这是sub</sub>
+    <sup>这是sup</sup>
+    <mark>这是mark</mark>
+
+    <a href="#">这是链接</a>
+    <a class>这是链接</a>
+    <a>这是链接</a>
+
+    <kbd>这是kbd</kbd>
+    <code>这是code</code>
+    <pre>这是pre</pre>
+    <samp>这是samp</samp>
+    <a href=""><code>这是code</code></a>
+    <pre><code>这是code</code></pre>
+    <kbd><kbd>这是kbd</kbd></kbd>
+    <small>这是small</small>
+    <ul>
+        <dl>
+            <dt>123</dt>
+            <dd>123</dd>
+        </dl>
+        <li>123</li>
+        <ol>
+            <li>123</li>
+            <li>123</li>
+            <li>123</li>
+        </ol>
+        <li>123</li>
+        <ul>
+            <li>123</li>
+            <li>123</li>
+            <li>123</li>   
+        </ul>
+    </ul>
+    <img src="/locallibrary/catalog/static/images/hatsune_miku.png" alt="初音未来" height="200" class="rounded-circle">
+    <img src="/locallibrary/catalog/static/images/hatsune_miku.png" alt="初音未来" height="200" class="rounded-pill">
+    <img src="/locallibrary/catalog/static/images/hatsune_miku.png" alt="初音未来" height="200" class="img-thumbnail">
+    <img src="/locallibrary/catalog/static/images/hatsune_miku.png" alt="初音未来" height="200" class="float-start">
+    <img src="/locallibrary/catalog/static/images/hatsune_miku.png" alt="初音未来" height="200" class="float-end">
 </body>
 </html>
