--- a/learn/bootstrap/other/index.html
+++ b/learn/bootstrap/other/index.html
@@ -4,27 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/learn/bootstrap/bootstrap-5.3.3/js/bootstrap.bundle.js"></script>
-    <link rel="stylesheet" href="/learn/bootstrap/bootstrap-5.3.3/css/bootstrap.css">
+    <script src="../bootstrap-5.3.3/js/bootstrap.bundle.js"></script>
+    <link rel="stylesheet" href="../bootstrap-5.3.3/css/bootstrap.css">
 </head>
 <body data-bs-theme="light">
+    <div class="container-fluid">
+        <!-- 导航栏 -->
         <nav class="navbar navbar-expand-sm fixed-top bg-body shadow">
             <div class="container-fluid">
-                <a href="#" class="navbar-brand">
-                    <img src="/learn/bootstrap/other/home-icon.svg" alt="首页" width="24px">
-                </a>
-                <div class="form-check form-switch form-check-reverse">
-                    <label for="theme" class="form-check-label text-nowrap">模式</label>
-                    <input type="checkbox" name="theme" id="theme" class="form-check-input">
+                <div class="d-flex align-items-baseline">
+                    <a href="#" class="navbar-brand">
+                        <img src="./home-icon.svg" alt="首页" width="24px">
+                    </a>
+                    <div class="form-check form-switch form-check-reverse">
+                        <label for="theme" class="form-check-label text-nowrap">模式</label>
+                        <input type="checkbox" name="theme" id="theme" class="form-check-input">
+                    </div>
                 </div>
                 <button type="button" class="btn navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav-ul">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse" id="nav-ul">
-                    <ul class="navbar-nav navbar-nav-scroll p-1">
+                    <ul class="navbar-nav navbar-nav-scroll">
                         <li class="nav-item dropdown">
                             <button type="button" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">编程</button>
-                            <ul class="dropdown-menu overflow-y-scroll" style="height: 75vh;">
+                            <ul class="dropdown-menu overflow-y-scroll" style="max-height: 75vh; top: 48px;">
                                 <li class="dropdown-header">前端</li>
                                 <a href="#" class="dropdown-item">HTML</a>
                                 <a href="#" class="dropdown-item">CSS</a>
@@ -58,65 +62,146 @@
                 </div>
             </div>
         </nav>
-
-        <main class="" style="margin-top: 70px;">
-            <button type="button" class="btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#off-ul">弹出</button>
-            <div class="offcanvas offcanvas-start" id="off-ul">
-                <div class="offcanvas-header">
-                    <div class="offcanvas-title">目录</div>
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+        <!-- 主内容 -->
+        <main style="margin-top: 70px;">
+            <!-- 导航标签 -->
+            <ul class="nav nav-tabs nav-fill">
+                <a href="#" class="nav-link active" data-bs-toggle="tab" data-bs-target="#nav-pane1">编程</a>
+                <a href="#" class="nav-link" data-bs-toggle="tab" data-bs-target="#nav-pane2">动漫</a>
+                <a href="#" class="nav-link" data-bs-toggle="tab" data-bs-target="#nav-pane3">小说</a>
+                <a href="#" class="nav-link" data-bs-toggle="tab" data-bs-target="#nav-pane4">文学</a>
+                <a href="#" class="nav-link" data-bs-toggle="tab" data-bs-target="#nav-pane5">音乐</a>
+                <a href="#" class="nav-link disabled" data-bs-toggle="tab" data-bs-target="#nav-pane6">其他</a>               
+            </ul>
+            <!-- 导航内容 -->
+            <div class="tab-content mt-2">
+                <!-- 编程部分：明信片+导航 -->
+                <div class="tab-pane card active" id="nav-pane1">
+                    <!-- 明信片头 实际是导航标签 -->
+                    <div class="card-header">
+                        <ul class="card-header-pills nav nav-pills nav-justified">
+                            <a href="#card-pane1" class="nav-link active" data-bs-toggle="pill">前端</a>
+                            <a href="#card-pane2" class="nav-link" data-bs-toggle="pill">后端</a>
+                            <a href="#card-pane3" class="nav-link" data-bs-toggle="pill">框架</a>
+                        </ul>
+                    </div>
+                    <!-- 明信片体 实际是导航内容 -->
+                    <div class="card-body" style="height: 500px;">
+                        <div class="tab-content">
+                            <div class="tab-pane active" id="card-pane1">
+                                前端内容
+                            </div>
+                            <div class="tab-pane" id="card-pane2">
+                                后端内容
+                            </div>
+                            <div class="tab-pane" id="card-pane3">
+                                框架内容
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 明信片脚 -->
+                    <div class="card-footer text-end">
+                        编程相关
+                    </div>
                 </div>
-                <div class="offcanvas-body">
-                    <p>1</p>
+                <!-- 动漫部分：幻灯片 -->
+                <div class="tab-pane carousel carousel-dark slide" id="nav-pane2" data-bs-ride='carousel'>
+                    <!-- 容器 -->
+                    <div class="carousel-inner">
+                        <img src="./夕阳-山脉-雾霭.png" alt="夕阳-山脉-雾霭" class="carousel-item d-block w-100">
+                        <div class="carousel-item active">
+                            <img src="./天空-云朵-山脉.png" alt="天空-云朵-山脉" class="d-block w-100">
+                            <h2 class="carousel-caption">天空-云朵-山脉</h2>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./星空-山脉-奇异.png" alt="星空-山脉-奇异" class="d-block w-100">
+                            <div class="carousel-caption">
+                                <h3 class="text-danger">星空-山脉-奇异</h3>
+                                <p>这是一幅剪贴画</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 切换 -->
+                    <div style="display: contents;">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#nav-pane2" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#nav-pane2" data-bs-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </button>
+                    </div>
+                    <!-- 指示 -->
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#nav-pane2" data-bs-slide-to="0"></button>
+                        <button type="button" data-bs-target="#nav-pane2" data-bs-slide-to="1" class="active"></button>
+                        <button type="button" data-bs-target="#nav-pane2" data-bs-slide-to="2"></button>
+                    </div>
                 </div>
+                <!-- 小说部分：明信片+图片 -->
+                <div class="tab-pane card" id="nav-pane3">
+                    <!-- 图片 -->
+                    <img src="./设计师跑步.png" alt="设计师跑步" class="card-img-top">
+                    <!-- 明信片体 -->
+                    <div class="card-body">
+                        <h3 class="card-title">主标题</h3>
+                        <h5 class="card-subtitle">副标题</h5>
+                        <hr>
+                        <a href="./page.html" class="card-link">page</a>
+                        <div class="card-text">一张矢量图</div>
+                        <a href="#" class="btn btn-secondary">按钮</a>
+                    </div>
+                </div>
+                <!-- 文学部分：折叠组 -->
+                <div class="tab-pane" id="nav-pane4">
+                    <button class="btn btn-info" data-bs-toggle="collapse" data-bs-target="#collapse1">显示相关内容</button>
+                    <div class="collapse show" id="collapse1">
+                        Voe.js是一个底层小程序框架，它实现了小程序的双线程架构，通过利用“沙箱”隔离Web环境，屏蔽DOM能力，从而确保应用的稳定性和性能。Voe.js的设计灵感来源于Vue.js，不仅借鉴了其响应式系统和组件化思想，还创新性地引入了Web Worker，将计算密集型任务移至后台线程执行，从而避免阻塞主线程，提升用户体验。
+                    </div>
+                </div>
+                <!-- 音乐部分：手风琴 -->
+                <div class="tab-pane accordion" id="nav-pane5">
+                    <div class="accordion-item">
+                        <div class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#acc1">国语</div>
+                        <div class="accordion-collapse collapse" id="acc1" data-bs-parent="#nav-pane5">双线程架构的最大优势在于能够显著提升应用的性能。通过将计算密集型任务（如数据处理、DOM更新等）移至后台线程执行，主线程可以专注于处理用户交互和UI渲染，从而避免界面卡顿和延迟。</div>
+                    </div>
+                    <div class="accordion-item">
+                        <div class="accordion-header">
+                            <div class="accordion-button" data-bs-toggle="collapse" data-bs-target="#acc2">粤语</div>
+                        </div>
+                        <div class="accordion-collapse collapse show" id="acc2" data-bs-parent="#nav-pane5">
+                            <div class="accordion-body">
+                                沙箱隔离技术使得Voe.js能够在一个受控的环境中执行代码，有效防止了恶意代码对主线程和DOM的破坏。这种隔离机制不仅提升了应用的安全性，还增强了其稳定性。
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <div class="accordion-header">
+                            <div class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#acc3">日语</div>
+                        </div>
+                        <div class="accordion-collapse collapse" id="acc3" data-bs-parent="#nav-pane5">
+                            <div class="accordion-body">
+                                沙箱隔离技术使得Voe.js能够在一个受控的环境中执行代码，有效防止了恶意代码对主线程和DOM的破坏。这种隔离机制不仅提升了应用的安全性，还增强了其稳定性。
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane" id="nav-pane6"></div>
             </div>
-            <div>
-                <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            <p>123</p>
-            </div>
-            <input type="checkbox" name="sa" id="sa">
         </main>
-    
+    </div>
 </body>
 <script>
+    if (localStorage.getItem('data-bs-theme') == 'dark') {
+        document.body.setAttribute('data-bs-theme','dark');
+        document.getElementById('theme').checked = true;
+    }
     document.getElementById('theme').onclick = function() {
         if (this.checked) {
             document.body.setAttribute('data-bs-theme','dark');
+            localStorage.setItem('data-bs-theme','dark');
         } else {
             document.body.setAttribute('data-bs-theme','light');
+            localStorage.setItem('data-bs-theme','light');
         }
     }
 </script>
