--- a/learn/bootstrap/导航.html
+++ b/learn/bootstrap/导航.html
@@ -42,5 +42,25 @@
     <div class="tab-pane container fade" id="menu2">789</div>
     <div class="tab-pane container fade" id="menu3">zhuijia</div>
   </div>
+
+  <ul class="nav nav-pills nav-fill">
+    <li class="nav-item">
+      <a class="nav-link active" data-bs-toggle="tab" href="#home">主页</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-bs-toggle="tab" href="#menu1">菜单 1</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-bs-toggle="tab" href="#menu2">菜单 2</a>
+    </li>
+    <a class="nav-link" data-bs-toggle="tab" href="#menu3">菜单 3</a>
+  </ul>
+  <div class="tab-content">
+    <div class="tab-pane fade active" id="home">123</div>
+    <div class="tab-pane container fade" id="menu1">456</div>
+    <div class="tab-pane container fade" id="menu2">789</div>
+    <div class="tab-pane container fade" id="menu3">zhuijia</div>
+  </div>
+
 </body>
 </html>
